--- a/estilos/home/estilos.css
+++ b/estilos/home/estilos.css
@@ -3,78 +3,77 @@
     src: url(../fonts/Roboto/Roboto-Regular.ttf);
 }
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-.containner-grid{
+.containner-grid {
     max-width: 1200px;
     margin: 0 auto;
 }
 
-header{
+header {
     background-color: rgb(22, 43, 203);
 }
 
-.header-flex{
+.header-flex {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 90px;
 }
 
-header nav{
+header nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 35%;
 }
 
-.form-flex{
+.form-flex {
     display: flex;
-    justify-content: space-around;
-    height: 11rem;
-    margin: 33rem;
     flex-direction: column;
-    margin-top: 13rem;
+    margin-top: 60px;
 }
 
-.form-flex p{
+.form-flex p {
     border: 1px solid black;
     border-radius: 6px;
     padding: 4rem;
-    margin: 2rem;
-    margin-left: -10rem;
+    margin: 0 auto;
     width: 30rem;
     text-align: center;
     color: #737171;
     font-size: 23px;
 }
 
-.section-flex{
+.section-flex {
     display: flex;
-    justify-content: space-between;
     flex-flow: wrap;
+    justify-content: space-between;
     width: 30rem;
-    margin-left: -10rem;
-    margin-top: 32px;
+    margin: 0 auto;
 }
 
-.section-flex input{
+.section-flex input {
     margin-top: 1rem;
     padding: 12px;
     border-radius: 6px;
     border-color: black;
 }
 
-header img{
+header img {
     width: 8rem;
 }
 
-header a{
+header a {
     color: white;
     text-decoration: none;
     font-family: 'Roboto-Regular';
+}
+
+.menu-alternado {
+    display: none;
 }
